stylesheets/stylesheet.css
/*******************************************************************************
Slate Theme for GitHub Pages
by Jason Costello, @jsncostello
*******************************************************************************/

@import url(pygment_trac.css);

/*******************************************************************************
MeyerWeb Reset
*******************************************************************************/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

ol, ul {
  list-style: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
  margin-left: auto;
  margin-right: auto;
}

iframe {
    width:100%;
    height:100%;
    position:relative;
    padding:0px;
    border:0px;
    <!--z-index: -1;-->
}

header {
    background: rgba(48, 48, 48, 0.98);
    border-style:solid;
    border-width:0px;
    border-color:#000000;
    
    border-bottom: 2px solid #000000;
    
    <!--margin-top:0px;
    width:100%;
    height:80px;
    z-index:1;
    position:fixed;-->
}

body {
    box-sizing: border-box;
    color:#373737;
    background:#f2f2f2;
    
    width:100%;
    height:100%;
    
    overflow-y: hidden;
    
    font-size: 16px;
    font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
    
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

h1, h2, h3, h4, h5, h6 {
    color:#222;
    font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif; 
    letter-spacing: -1px;
}

h1 {
    font-size: 36px;
    font-weight: 700;
}

h2 {
    padding-bottom: 10px;
    font-size: 33px; 
}

h3 { font-size: 24px; }

h4 { font-size: 21px; }

h5 { font-size: 18px; }

h6 { font-size: 16px; }

p { margin: 10px 0 15px 0; }

footer p { color: #f2f2f2; }

a {
  text-decoration: none;
  color: #007edf;
  text-shadow: none;
    
  transition: color 0.5s ease;
  transition: text-shadow 0.5s ease;
  -webkit-transition: color 0.5s ease;
  -webkit-transition: text-shadow 0.5s ease;
  -moz-transition: color 0.5s ease;
  -moz-transition: text-shadow 0.5s ease;
  -o-transition: color 0.5s ease;
  -o-transition: text-shadow 0.5s ease;
  -ms-transition: color 0.5s ease;
  -ms-transition: text-shadow 0.5s ease;
}

a:hover, a:focus { text-decoration: underline; }
a:target { display: block; position: relative; top: -125px; visibility: hidden; }

footer a {
  color: #F2F2F2;
  text-decoration: underline;
}

id:target { display: block; position: relative; top: -125px; visibility: hidden; }

em {
  font-style: italic;
}

strong {
  font-weight: bold;
}

img {
  position: relative;
  margin: 0 auto;
  padding: 5px;
  margin: 10px 0 10px 0;
}

p img {
    display: inline;
    margin-left: auto;
    margin-right: auto;
    padding: 0px;
    vertical-align: middle;
    text-align: center;
    border: none;
}

img.displayed {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 0px;
    vertical-align: middle;
    text-align: center;
    border: none;
}

pre, code {
  width: 100%;
  color: #222;
  background-color: #fff;

  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  font-size: 14px;

  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
}

pre {
  width: 100%;
  padding: 10px;
  box-shadow: 0 0 10px rgba(0,0,0,.1);
  overflow: auto;
}

code {
  padding: 3px;
  margin: 0 3px;
  box-shadow: 0 0 10px rgba(0,0,0,.1);
}

pre code {
  display: block;
  box-shadow: none;
}

blockquote {
  color: #666;
  margin-bottom: 20px;
  padding: 0 0 0 20px;
  border-left: 3px solid #bbb;
}

ul, ol, dl {
  margin-bottom: 15px
}

ul {
  list-style: inside;
  padding-left: 20px;
}

ol {
  list-style: decimal inside;
  padding-left: 20px;
}

dl dt {
  font-weight: bold;
}

dl dd {
  padding-left: 20px;
  font-style: italic;
}

dl p {
  padding-left: 20px;
  font-style: italic;
}

hr {
  height: 1px;
  margin-bottom: 5px;
  border: none;
  background: url('../images/bg_hr.png') repeat-x center;
}

table {
  border: 0px solid #f2f2f2;
  margin-bottom: 20px;
  text-align: left;
 }


th {
  font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  padding: 10px;
  background: #373737;
  color: #fff;
 }

td {
  padding: 10px;
  border: 0px solid #373737;
 }

form {
  background: #f2f2f2;
  padding: 20px;
}

/*******************************************************************************
Full-Width Styles
*******************************************************************************/

.outer {
  width: 100%;
}

.inner {
    border-top: 0px;
    border-left: 2px solid #373737;
    border-right: 2px solid #373737;
    border-bottom: 2px solid #373737;
    
    padding-left: 10px;
    padding-right: 10px;
    
    position: relative;
    max-width: 1024px;
    
    margin-top: 80px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10px;
}

#project_title {
  margin: 0;
  color: #fff;
  font-size: 42px;
  font-weight: 700;
  text-shadow: #111 0px 0px 10px;
}

#project_tagline {
  color: #fff;
  font-size: 24px;
  font-weight: 300;
  background: none;
  text-shadow: #111 0px 0px 10px;
}

#main_content_wrap {
  background: #f2f2f2;
  border-top: 1px solid #f2f2f2;
  border-bottom: 1px solid #f2f2f2;
}

#main_content {
  padding-top: 40px;
}

#footer_wrap {
  background: #f2f2f2;
}


<style type="text/css">
  .centeredImage
    {
    text-align:center;
    margin-top:0px;
    margin-bottom:0px;
    padding:0px;
    }
</style>


/*******************************************************************************
Small Device Styles
*******************************************************************************/

@media screen and (max-width: 480px) {
  body {
    font-size:14px;
  }

  #downloads {
    display: none;
  }

  .inner {
    min-width: 320px;
    max-width: 480px;
  }

  #project_title {
  font-size: 32px;
  }

  h1 {
    font-size: 28px;
  }

  h2 {
    font-size: 24px;
  }

  h3 {
    font-size: 21px;
  }

  h4 {
    font-size: 18px;
  }

  h5 {
    font-size: 14px;
  }

  h6 {
    font-size: 12px;
  }

  code, pre {
    min-width: 320px;
    max-width: 480px;
    font-size: 11px;
  }

}

